--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,7 +21,7 @@ main {
   border-radius: 40px;
   font-weight: 500;
   letter-spacing: 1px;
-  background-color: #147000;
+  /* background-color: #147000; */
 }
 .content .imgBox {
   width: 600px;
